--- a/app/src/main/res/layout/activity_sp_pho_bien.xml
+++ b/app/src/main/res/layout/activity_sp_pho_bien.xml
@@ -48,13 +48,15 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toBottomOf="@id/textView">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <EditText
+            android:background="#E9E9E9"
             android:id="@+id/edSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Tìm kiếm sản phẩm"
+
             android:padding="12dp"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
